# wolapp

./: .dockerignore  Cargo.toml  Dockerfile  README.md  justfile  rustfmt.toml
.github/workflows/: build-image-latest.yml  build-image-next.yml  build-image-tag.yml
src/: main.rs
src/controllers/: magic.rs  mod.rs
src/middlewares/: logger.rs
views/: index.html
